# StreamLib

./: .gitignore  CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt
tests/: CMakeLists.txt  tests.cpp
tests/stream/: max_min_tests.cpp
